@@ -96,7 +96,7 @@ public final class SignMenuFactory {
             player.sendBlockChange(location, Material.OAK_SIGN.createBlockData());
             player.sendSignChange(
                 location,
-                text.stream().map(this::color).collect(Collectors.toList()).toArray(new String[4])
+                text.stream().map(this::color).toList().toArray(new String[4])
             );
 
             PacketContainer openSign = ProtocolLibrary.getProtocolManager().createPacket(PacketType.Play.Server.OPEN_SIGN_EDITOR);
